<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <!--    Home-->
    <string name="home_bottom_menu_home">Home</string>
    <string name="home_bottom_menu_promo">Promo</string>
    <string name="home_bottom_menu_order_history">Riwayat</string>
    <string name="home_bottom_menu_profile">Profile</string>
    <string name="home_text_back_button_exit">Press back again to exit</string>
    <string name="home_text_category">Kategori</string>
    <string name="home_search">Cari tukang untuk anda..</string>
    <string name="home_see_all">Lihat Semua</string>
    <string name="home_menu_profile">Profil</string>
    <string name="home_menu_sign_out">Keluar</string>
    <string name="home_menu_sign_out_ask">Anda yakin ingin keluar?</string>
    <string name="home_menu_question">Pertanyaan?</string>
    <string name="subcategory_name">Nama subkategori</string>
    <string name="category_name">Nama kategori</string>
    <string name="choose_your_location">Pilih lokasi anda</string>
    <string name="home_out_of_area">Diluar jangkauan</string>

    <!--    Product detail-->
    <string name="product_detail">Detail Produk</string>
    <string name="contact_us">Hubungi kami</string>
    <string name="merchant_name">Nama merchant</string>
    <string name="description">Deskripsi</string>
    <string name="payment">Pembayaran</string>
    <string name="order">Pesan</string>
    <string name="service_used">%sx Terpakai</string>
    <string name="years">%s tahun</string>
    <string name="currency_format">Rp%s</string>
    <string name="rating">%s/5</string>
    <string name="booking_code">Kode booking</string>
    <string name="price">Harga</string>
    <string name="status">Status</string>

    <!--    Register-->
    <string name="phone_number">No. Handphone</string>
    <string name="choose_gender">Pilih jenis kelamin</string>
    <string name="register_verification_code">Kode</string>
    <string name="register_send_code">Kirim kode</string>
    <string name="register_please_fill_email">Harap masukkan email anda</string>
    <string name="register_verification_code_info">Kode akan dikirimkan ke e-mail Anda</string>
    <string name="register_location_info">Pilih lokasi Anda</string>
    <string name="register_bank_info">Pilih Bank pilihan Anda</string>
    <string name="register_succeed">Berhasil mendaftar</string>
    <string name="register_send_code_succeed">Harap cek email Anda.</string>
    <string name="profile_upload_profile_picture">Unggah Foto Profil</string>

    <!--    promo-->
    <string name="promo_title">Judul promo</string>
    <string name="promo_description">Deskripsi promo</string>
    <string name="promo_code">Kode promo</string>
    <string name="promo_discount_amount">Total diskon promo</string>
    <string name="promo_minimum_transaction">Minimum transaksi</string>
    <string name="promo_quota">Kuota promo</string>
    <string name="promo_start_date">Tanggal mulai</string>
    <string name="promo_expired_date">Tanggal kadaluwarsa</string>
    <string name="promo_upload_picture">Unggah Foto Promo</string>
    <string name="promo">Promo</string>

    <!--    History-->
    <string name="your_order">Pemesanan Anda</string>
    <string name="active">Aktif</string>
    <string name="done">Selesai</string>
    <string name="date">Tanggal</string>
    <string name="order_history_detail">Detail pesanan</string>
    <string name="payment_type">Tipe pembayaran</string>
    <string name="notes">Catatan</string>

    <!--    Profile-->
    <string name="profile_are_you_sure_logout">Anda yakin ingin keluar?</string>
    <string name="profile_help_desc">Hubungi kami untuk membantu kamu</string>
    <string name="profile_rate_us">Rate us</string>
    <string name="profile_terms_and_conditions">Syarat &amp; Ketentuan</string>
    <string name="profile_rate_us_desc">Kasih penilaian kamu terhadap layanan kami</string>
    <string name="profile_terms_and_condition_desc">Baca ketentuan dan kondisi kami</string>
    <string name="profile_logout_desc">Keluar dari akun kamu</string>
    <string name="profile_login_desc">Masuk ke akun kamu</string>
    <string name="contact">Hubungi</string>
    <string name="contact_us_via">Hubungi kami melalui..</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telephone">Telepon</string>
    <string name="email">Email</string>
    <string name="contact_us_email">sage@gmail.com</string>
    <string name="submit">Kirim</string>

    <!--    image-->
    <string name="upload_image">Unggah gambar</string>
    <string name="upload_image_via">Unggah gambar melalui..</string>
    <string name="galery">Galeri</string>
    <string name="camera">Kamera</string>

    <!--    shared-->
    <string name="shared_res_please_fill_blank_space">Harap lengkapi data yang tersedia</string>
    <string name="shread_res_edit">Ubah</string>
    <string name="shared_res_name">Nama</string>
    <string name="shared_res_location">lokasi</string>
    <string name="shared_res_subscription">Langganan</string>
    <string name="shared_res_send">Kirim</string>
    <string name="shared_res_buy">Beli</string>
    <string name="shared_res_pay">Bayar</string>
    <string name="shared_res_yes">Ya</string>
    <string name="shared_res_no">Tidak</string>
    <string name="shared_res_email">Email</string>
    <string name="shared_res_password">Password</string>
    <string name="shared_res_register">Daftar</string>
    <string name="shared_res_have_account">Belum punya akun?</string>
    <string name="shared_res_login">Masuk</string>
    <string name="shared_res_loading">Tunggu..</string>
    <string name="shared_res_success">Berhasil</string>
    <string name="shared_res_failed">Gagal</string>
    <string name="shared_res_failed_load">Gagal memuat</string>
    <string name="shared_res_copied">Tersalin</string>
    <string name="shared_res_yes_logout">Ya, keluar</string>
    <string name="shared_res_logout">Keluar</string>
    <string name="shared_res_back">Kembali</string>
    <string name="shared_res_whatsapp_number">085882411322</string>
    <string name="shared_res_closed">Tutup</string>
    <string name="shared_res_no_data">Oops! belum terdapat data..</string>
    <string name="shared_res_help">Bantuan</string>
    <string name="shared_res_processing">Memproses</string>
    <string name="shared_res_login_with_your_account">Masuk dengan akun anda</string>
    <string name="shared_res_address">Alamat</string>
    <string name="shared_res_status">Status</string>
    <string name="shared_res_status_negotiating">Dalam penawaran</string>
    <string name="shared_res_status_waiting_for_payment">Menunggu pembayaran</string>
    <string name="shared_res_status_pending_payment_approval">Menunggu penerimaan</string>
    <string name="shared_res_status_ongoing">Sedang dikerjakan</string>
    <string name="shared_res_status_cancel_order">Dibatalkan</string>
    <string name="shared_res_status_done">Selesai</string>
    <string name="shared_res_status_unknown">Tidak diketahui</string>
    <string name="shared_res_status_cancel">Batal</string>
    <string name="shared_res_give_review">Beri ulasan</string>
    <string name="shared_res_review">Ulasan</string>

    <!--    city-->
    <string name="city_res_jakarta">Jakarta</string>

    <!--    order-->
    <string name="order_confirmation">Konfirmasi order</string>
    <string name="order_confirmation_description">Data dibawah dapat diubah pada saat melakukan penawaran</string>
    <string name="order_confirmation_date">Perkiraan tanggal pengerjaan</string>
    <string name="order_confirmation_time">Perkiraan jam pengerjaan</string>
    <string name="order_confirmation_notes">Catatan</string>
    <string name="order_upload_payment_receipt">Unggah foto pembayaran</string>
    <string name="order_review_description">Anda dapat memberikan penilaian terhadap layanan order ini</string>
    <string name="order_review_sent">Terima kasih untuk ulasan Anda!</string>
    <string name="order_pay_transfer_failed_receipt_not_uploaded">Harap unggah bukti pembayaran Anda</string>
    <string name="order_pay_transfer_success_upload">Terima kasih untuk pembayaran Anda, harap tunggu konfirmasinya ya!</string>
</resources>
