<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_6"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_10sdp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:text="@string/shared_res_give_review"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/font_poppins_semibold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:text="@string/order_review_description"
            android:gravity="center"
            android:textColor="@color/colorGrayText"
            android:fontFamily="@font/font_poppins_regular"
            android:maxLines="2"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_gravity="center_vertical"
            android:isIndicator="false"
            android:theme="@style/RatingBar"
            android:rating="5"
            android:stepSize="1"
            android:layout_marginTop="@dimen/_24sdp"/>

        <EditText
            android:id="@+id/etReview"
            style="@style/Regular14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/shared_res_review" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/btCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shared_res_status_cancel"
                android:background="@drawable/bg_rounded_6"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:fontFamily="@font/font_poppins_bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shared_res_send"
                android:background="@drawable/bg_rounded_6"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:fontFamily="@font/font_poppins_bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_8sdp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>