<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ResourceName">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back"/>

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_icon"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shared_res_name"
            style="@style/Regular14"
            android:inputType="textCapSentences"
            android:layout_marginTop="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_rounded_stroke_6"
            android:backgroundTint="@color/textColorGray"
            android:layout_marginTop="@dimen/_8sdp">
            <Spinner
                android:id="@+id/snLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Regular14"
                android:padding="@dimen/_8sdp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Regular10Gray"
            android:text="@string/register_location_info"
            android:layout_marginTop="@dimen/_3sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_stroke_6"
            android:backgroundTint="@color/textColorGray"
            android:layout_marginTop="@dimen/_8sdp">
            <Spinner
                android:id="@+id/snBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Regular14"
                android:padding="@dimen/_8sdp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Regular10Gray"
            android:text="@string/register_bank_info"
            android:layout_marginTop="@dimen/_3sdp"/>

        <EditText
            android:id="@+id/etBankAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_bank_account_number"
            style="@style/Regular14"
            android:layout_marginTop="@dimen/_12sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_12sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_upload_profile_picture"
                style="@style/SemiBold20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/ivAddPhotoProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_photo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_12sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_upload_ktp_picture"
                style="@style/SemiBold20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/ivAddPhotoKtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_photo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_12sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_upload_ktp_picture_person"
                style="@style/SemiBold20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/ivAddPhotoKtpPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_photo"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shared_res_email"
                style="@style/Regular14"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/_12sdp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shared_res_password"
                style="@style/Regular14"
                android:inputType="textPassword"
                android:layout_below="@+id/etEmail"
                android:layout_marginTop="@dimen/_12sdp"/>
            <ImageView
                android:id="@+id/ivPasswordIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password_unseen"
                android:layout_alignTop="@+id/etPassword"
                android:layout_alignBottom="@+id/etPassword"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:paddingLeft="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tvVerificationCodeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Regular12"
                android:layout_toLeftOf="@+id/btSendCode"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_alignBottom="@+id/btSendCode"
                android:text="@string/register_verification_code_info"/>
            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_verification_code"
                style="@style/Regular14"
                android:inputType="textPassword"
                android:layout_toLeftOf="@+id/btSendCode"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_above="@id/tvVerificationCodeInfo"/>

            <Button
                android:id="@+id/btSendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_6"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register_send_code"
                style="@style/ButtonText"
                android:padding="@dimen/_8sdp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/etPassword"
                android:layout_marginTop="@dimen/_12sdp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_6"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/shared_res_register"
            style="@style/ButtonText"
            android:layout_marginTop="@dimen/_30sdp"/>
    </LinearLayout>
</ScrollView>