<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlOrderHistory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_8sdp">
            <TextView
                android:id="@+id/tvOrderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/SemiBold18"/>
            <TextView
                android:id="@+id/tvMerchantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                style="@style/Regular10Gray"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/booking_code"
        style="@style/Regular10Gray"
        android:layout_marginTop="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_marginTop="@dimen/_4sdp"
        style="@style/SemiBold14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/date"
        style="@style/Regular10Gray"
        android:layout_marginTop="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_marginTop="@dimen/_4sdp"
        style="@style/SemiBold14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/price"
        style="@style/Regular10Gray"
        android:layout_marginTop="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        style="@style/Regular14"
        android:layout_marginTop="@dimen/_4sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/status"
        style="@style/Regular10Gray"
        android:layout_marginTop="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        style="@style/Regular12Green"
        android:layout_marginTop="@dimen/_4sdp"/>
</LinearLayout>