<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ResourceName">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ic_logo_sage"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_24sdp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shared_res_email"
            style="@style/Regular14"
            android:paddingTop="@dimen/_19sdp"
            android:paddingBottom="@dimen/_19sdp"
            android:paddingStart="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_standard"
            android:background="@drawable/shadow_edittext"
            android:layout_marginTop="@dimen/_50sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_standard_new"
            android:paddingBottom="@dimen/spacing_standard_new"
            android:paddingStart="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_standard"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/shadow_edittext">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxEms="7"
                style="@style/Regular16"
                android:hint="@string/shared_res_password"
                android:layout_centerVertical="true"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/ivPasswordIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password_unseen"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"/>
        </RelativeLayout>

        `<Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_6"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/shared_res_login"
            style="@style/ButtonText"
            android:layout_marginTop="@dimen/_30sdp"/>`

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shared_res_register"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            style="@style/Regular12"
            android:padding="@dimen/_4sdp"/>
    </LinearLayout>
</ScrollView>